--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  @keyframes marquee {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-50%);
+    }
+  }
+
+  .animate-marquee {
+    animation: marquee 90s linear infinite;
+  }
+
+  .pause-animation {
+    animation-play-state: paused;
+  }
+}
